--- a/style/index.css
+++ b/style/index.css
@@ -5,8 +5,28 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+main {
+    max-width: 1340px;
+    margin: 0px auto;
+}
+
 /* shared style */
-.section-title {}
+.section-title {
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 10px;
+
+}
+
+.section-desc {
+    color: #534C64;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
 
 
 
@@ -99,4 +119,120 @@
     font-weight: 500;
     margin-top: 0px;
     margin-bottom: 10px;
+}
+
+
+
+.banner-container .signing-btn {
+    padding: 20px 40px;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border-radius: 48px;
+    background: #FF42A5;
+    margin-right: 1rem;
+}
+
+.banner-container .go-rougue-btn {
+    padding: 20px 40px;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 600;
+    border-radius: 48px;
+    background: #4EC5F7;
+}
+
+.title-special-color {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* Games Section */
+.games-container {
+    padding: 0px 100px;
+    text-align: center;
+
+}
+
+.games-items-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.games-item {
+    text-align: center;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    gap: 50px;
+    word-wrap: break-word;
+    margin-top: 20px;
+}
+
+.games-item img {
+    width: 90%;
+    height: 90%;
+}
+
+.games-img-desc {
+    color: #534C64;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+/* play section */
+.play-container {
+    display: flex;
+    padding-left: 100px;
+    padding-right: 100px;
+    justify-content: space-between;
+    gap: 100px;
+    margin: auto;
+    margin-top: 30px;
+    text-align: right;
+}
+
+.play content {
+    width: 50%;
+}
+
+.section-title-color {
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.play-section-desc {
+    color: #534C64;
+    font-size: 18px;
+    font-weight: 400;
+
+
+}
+
+.play-img-container {
+    width: 100%;
+}
+
+.play-img {
+    width: 90%;
+
+}
+
+.img-over-img {
+    width: 30%;
+    position: relative;
+    top: -25%;
+    left: -75%;
 }
