--- a/style/index.css
+++ b/style/index.css
@@ -267,6 +267,8 @@ main {
 
 }
 
+
+
 .games-catagory-container a {
 
     display: flex;
@@ -360,7 +362,7 @@ main {
     text-align: center;
 }
 
-.games-catagory-container,
+
 footer {
     display: none;
 }
@@ -460,6 +462,22 @@ footer {
     }
 
 
+    .games-catagory-container {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 5px;
+        margin-bottom: 30px;
+    
+    }
+    .games-catagory-container a {
+        font-size: 0.6rem;
+    
+    }
+    
+    .games-catagory-container a img {
+        width: 35px;
+    }
+
 
 
 
@@ -535,6 +553,22 @@ footer {
         width: 20%;
         top: -100px;
         left: -250px;
+    }
+
+    .games-catagory-container {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        gap: 5px;
+        margin-bottom: 30px;
+    
+    }
+    .games-catagory-container a {
+        font-size: 1rem;
+    
+    }
+    
+    .games-catagory-container a img {
+        width: 40px;
     }
 
 
