--- a/style/index.css
+++ b/style/index.css
@@ -170,43 +170,86 @@ main {
 }
 
 /* Games Section */
-.games-container {
+.games-container{
+    text-align: center;
     padding: 0px 100px;
-    text-align: center;
 
 }
 
-.games-items-container {
+
+.game-item-container{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4,1fr);
     margin: auto;
     justify-content: center;
     align-items: center;
 
 }
 
-.games-item {
+.games-item{
     text-align: center;
+    word-wrap: break-word;
     width: 100%;
+    gap: 50px;
     align-items: center;
     justify-content: center;
     margin: auto;
-    gap: 50px;
-    word-wrap: break-word;
     margin-top: 20px;
+    
 }
-
-.games-item img {
+.games-item a{
+    position: relative;
+    display: block;
+}
+.games-item img{
     width: 90%;
     height: 90%;
 }
-
 .games-img-desc {
     color: #534C64;
     font-size: 1.2rem;
     font-weight: 500;
     text-align: center;
+    padding-bottom: 10px;
 }
+
+.hover-img{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 90%;
+    height: 99%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #0b022341;
+    border-radius: 10px;
+    transition: 0.6s;
+    transform: translateX(-50%);
+    opacity: 0;
+
+}
+.hover-img img{
+    width: 50px;
+    height: 50px;
+}
+.hover-text{
+    font-size: 1.2rem;
+    color: white;
+    font-weight: 500;
+}
+.hover-img:hover{
+    opacity: 1;
+}
+
+
+
+
+
+
+
+
 
 /* play section */
 .play-container {
@@ -251,7 +294,7 @@ main {
 .img-over-img {
     width: 30%;
     position: relative;
-    top: -25%;
+    top: -20%;
     left: -80%;
 }
 
@@ -423,7 +466,7 @@ main {
         width: 100%;
     }
 
-    .games-items-container {
+    .game-item-container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         justify-content: center;
@@ -502,7 +545,9 @@ main {
 
 @media screen and (min-width:576px) and (max-width:992px) {
 
-
+    .nav-container{
+        text-align: center;
+    }
 
 
     .banner-desc {
@@ -535,7 +580,7 @@ main {
     }
 
 
-    .games-items-container {
+    .game-item-container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         justify-content: center;
@@ -585,6 +630,13 @@ main {
     
     .games-catagory-container a img {
         width: 40px;
+    }
+
+    .nav-social-btn {
+        display: flex;
+        border-radius: 8px;
+        background: rgba(11, 2, 35, 0.10);
+        padding: 10px;
     }
 
 
